[gd_scene load_steps=13 format=3 uid="uid://bgeb7gsyn4pn"]

[ext_resource type="Script" path="res://Scripts/Enemy/BlueMagent.gd" id="1_bmd7n"]
[ext_resource type="PackedScene" uid="uid://bwr5ucrmhrb4m" path="res://Scene Objects/Enemies/BlueMagentProjectile.tscn" id="2_ccrw6"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyMovement.gd" id="3_tkn18"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyPlayerDetection.gd" id="4_30oeg"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyCollisionDetection.gd" id="5_7lbgs"]
[ext_resource type="Texture2D" uid="uid://bd7ilcb71gc0x" path="res://Sprites/Enemies/BlueDragoon.png" id="6_x6n6v"]
[ext_resource type="PackedScene" uid="uid://cve2fw8d2yj8j" path="res://Scene Objects/Effects/ProjectileReflector.tscn" id="7_un7s4"]
[ext_resource type="PackedScene" uid="uid://ce2kqx88sgobh" path="res://Scene Objects/Effects/MagicPowerParticles.tscn" id="8_2fjyt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1n2w"]
radius = 12.0
height = 57.6

[sub_resource type="AtlasTexture" id="AtlasTexture_d10qs"]
atlas = ExtResource("6_x6n6v")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7jna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d10qs")
}],
"loop": true,
"name": &"default",
"speed": 60.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q7l5y"]
radius = 12.0
height = 57.6

[node name="BlueMagent" type="CharacterBody2D" node_paths=PackedStringArray("projectile_spawn_point", "reflector_sprite", "magic_particles", "movement", "collision_detection", "player_detection", "body", "sprite", "shape", "visibility_notifier")]
process_mode = 4
light_mask = 8
visibility_layer = 8
disable_mode = 1
collision_layer = 64
collision_mask = 3
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 1.39626
floor_snap_length = 24.0
platform_floor_layers = 3
safe_margin = 0.001
script = ExtResource("1_bmd7n")
blue_magent_projectile_scene = ExtResource("2_ccrw6")
projectile_spawn_point = NodePath(".")
firing_interval = 1.5
reflector_sprite = NodePath("ProjectileReflector")
magic_particles = NodePath("MagicPowerParticles")
magic_projectile_speed_modifier = 1.5
movement = NodePath("Enemy/Movement")
collision_detection = NodePath("Enemy/CollisionDetection")
player_detection = NodePath("Enemy/PlayerDetection")
body = NodePath(".")
sprite = NodePath("AnimatedSprite2D")
shape = NodePath("CollisionShape2D")
visibility_notifier = NodePath("VisibleOnScreenNotifier2D")
defeated_deactivation_camera_distance = 800.0
z_index_on_defeat = 8
metadata/Tag = "Enemy"

[node name="Enemy" type="Node" parent="."]

[node name="Movement" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_tkn18")
enemy = NodePath("../..")
face_movement_direction = false
is_always_facing_player = false

[node name="PlayerDetection" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy", "front_sightline_raycast", "back_sightline_raycast")]
script = ExtResource("4_30oeg")
enemy = NodePath("../..")
player_detection_distance = 640.0
enemy_sightline_distance = 224.0
enemy_short_sightline_distance = 224.0
front_sightline_raycast = NodePath("../../PlayerRayCastFront")
back_sightline_raycast = NodePath("../../PlayerRayCastBack")
use_back_sightline = true

[node name="CollisionDetection" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy", "raycast_wall_top_l", "raycast_wall_mid_l", "raycast_wall_bot_l", "raycast_wall_top_r", "raycast_wall_mid_r", "raycast_wall_bot_r", "raycast_ledge_l", "raycast_ledge_r")]
script = ExtResource("5_7lbgs")
enemy = NodePath("../..")
raycast_wall_top_l = NodePath("../../WallRayCastTopL")
raycast_wall_mid_l = NodePath("../../WallRayCastMidL")
raycast_wall_bot_l = NodePath("../../WallRayCastBotL")
raycast_wall_top_r = NodePath("../../WallRayCastTopR")
raycast_wall_mid_r = NodePath("../../WallRayCastMidR")
raycast_wall_bot_r = NodePath("../../WallRayCastBotR")
raycast_ledge_l = NodePath("../../LedgeRayCastL")
raycast_ledge_r = NodePath("../../LedgeRayCastR")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-16, -32, 32, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_f1n2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 8
visibility_layer = 8
z_index = 3
sprite_frames = SubResource("SpriteFrames_q7jna")
autoplay = "default"
flip_h = true

[node name="ProjectileReflector" parent="." instance=ExtResource("7_un7s4")]
visible = false
frame_progress = 0.518722

[node name="MagicPowerParticles" parent="." instance=ExtResource("8_2fjyt")]
color = Color(0.14902, 0.32549, 0.741176, 1)

[node name="ContactHitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 36

[node name="ContactHitboxShape" type="CollisionShape2D" parent="ContactHitbox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_q7l5y")

[node name="PlayerRayCastFront" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 15
hit_from_inside = true
collide_with_areas = true

[node name="PlayerRayCastBack" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 15
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastTopL" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(-13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastMidL" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastBotL" type="RayCast2D" parent="."]
position = Vector2(0, 23)
target_position = Vector2(-13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastTopR" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastMidR" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastBotR" type="RayCast2D" parent="."]
position = Vector2(0, 23)
target_position = Vector2(13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="LedgeRayCastL" type="RayCast2D" parent="."]
position = Vector2(-12, 32)
target_position = Vector2(0, 24)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="LedgeRayCastR" type="RayCast2D" parent="."]
position = Vector2(12, 32)
target_position = Vector2(0, 24)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="ProjectileSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, 32)

[connection signal="player_approach" from="Enemy/PlayerDetection" to="." method="on_player_approach"]
[connection signal="player_retreat" from="Enemy/PlayerDetection" to="." method="on_player_retreat"]
[connection signal="player_collision" from="Enemy/CollisionDetection" to="." method="on_player_collision"]
[connection signal="body_entered" from="ContactHitbox" to="Enemy/CollisionDetection" method="_on_contact_hitbox_body_entered"]
[connection signal="body_exited" from="ContactHitbox" to="Enemy/CollisionDetection" method="_on_contact_hitbox_body_exited"]
